--- a/ImageFeed/app/src/main/res/layout/activity_history.xml
+++ b/ImageFeed/app/src/main/res/layout/activity_history.xml
@@ -16,14 +16,10 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />
 
-    <android.support.v7.widget.RecyclerView
+    <FrameLayout
+        android:id="@+id/contentArea"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/rv_history"
-        android:layout_marginLeft="@dimen/screen_horizontal_padding"
-        android:layout_marginRight="@dimen/screen_horizontal_padding"
-        android:layout_marginBottom="@dimen/screen_vertical_padding"
-        android:layout_marginTop="@dimen/screen_vertical_padding" />
+        android:layout_height="match_parent" />
 
 
 </LinearLayout>
