Adding click action to history list

--- a/ImageFeed/app/src/main/res/layout/fragment_history.xml
+++ b/ImageFeed/app/src/main/res/layout/fragment_history.xml
@@ -10,6 +10,8 @@
         android:layout_marginLeft="@dimen/screen_horizontal_padding"
         android:layout_marginRight="@dimen/screen_horizontal_padding"
         android:layout_marginBottom="@dimen/screen_vertical_padding"
-        android:layout_marginTop="@dimen/screen_vertical_padding" />
+        android:layout_marginTop="@dimen/screen_vertical_padding"
+        android:clickable="true"
+        android:focusable="true"/>
 
 </LinearLayout>
